--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,8 @@
+*{
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +15,77 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+header{
+  display: flex;
+  justify-content: space-between;
+}
+
+header .header_left{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+header .header_left .header_logo{
+
+}
+
+header .header_left .header_logo h2{
+  display: flex;
+  align-items: center;
+  font-size: 50px;
+}
+
+header .header_left .header_logo h2 img{
+  width: 100px;
+  height: 55px;
+}
+
+header .header_left .header_buttons{
+
+}
+
+header .header_left .header_buttons ul{
+  display: flex;
+}
+
+header .header_left .header_buttons ul li{
+  margin: 0 0 0 20px;
+  list-style-type: none;
+}
+
+header .header_left .header_buttons ul li a{
+  color: black;
+  font-size: 30px;
+  text-decoration: none;
+}
+
+header .header_left .header_buttons ul li :hover{
+  color: blue;
+  text-decoration: underline;
+  transition: 1s;
+}
+
+header .sign_len_buttons{
+  display: flex;
+  align-items: center;
+  margin: 10px 20px 0 0;
+}
+
+header .sign_len_buttons a{
+  color: black;
+  font-size: 5px 10px;
+  text-decoration: none;
+  padding: 10px;
+  border: 3px solid black;
+  border-radius: 30px;
+}
+
+header .sign_len_buttons :hover{
+  color: blue;
+  border-color: blue;
+  transition: 1s;
 }
