ХУЙНЯ ЯКАСЬ, ЗАРАЗ ЇБАВ ТО РОБИТИ, ЗАВТРААААА

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -89,3 +89,28 @@ header .sign_len_buttons :hover{
   border-color: blue;
   transition: 1s;
 }
+
+.nav{
+  position: absolute;
+  background-color: white;
+  border: solid 1px black;
+  margin: 53px 0 0 0;
+}
+
+.nav ul{
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+}
+
+.nav ul li{
+  background-color: white;
+  padding: 15px;
+  margin: 0 !important;
+}
+
+.nav ul li a{
+  align-self: center;
+  background-color: white;
+  font-size: 20px;
+}
