--- a/mern-blog-frontend-master-2/src/pages/Registration/Login.module.scss
+++ b/mern-blog-frontend-master-2/src/pages/Registration/Login.module.scss
@@ -19,4 +19,27 @@
   display: flex;
   justify-content: center;
   margin-bottom: 30px;
+}.errorAlert {
+  width: 100%;
+  background-color: #ffebee;
+  color: #c62828;
+  padding: 16px;
+  border-radius: 8px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  margin-bottom: 24px;
+  font-weight: 500;
+  position: relative;
+  overflow: hidden;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 6px;
+    height: 100%;
+    background-color: #c62828;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+  }
 }
