--- a/mern-blog-frontend-master-2/src/index.scss
+++ b/mern-blog-frontend-master-2/src/index.scss
@@ -1,7 +1,8 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Roboto';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #F5F5F5 !important;
+  background-color: #ff6b6b !important;
+  height: 100%; /* Займає всю доступну висоту */
+  overflow: hidden; 
 }
