--- a/mern-blog-frontend-master-2/src/components/UserInfo/UserInfo.module.scss
+++ b/mern-blog-frontend-master-2/src/components/UserInfo/UserInfo.module.scss
@@ -7,8 +7,20 @@
   border-radius: 1rem;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   max-width: 100%;
-  max-height:100% ;
+  max-height: 100%;
 }
+.Loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.Loading img {
+  width: 50px; /* Розмір можна змінити за вашим бажанням */
+  height: 50px; /* Розмір можна змінити за вашим бажанням */
+}
+
 
 .avatar {
   width: 150px;
@@ -20,55 +32,42 @@
   margin-bottom: 1.5rem;
 }
 
-.userName {
-  font-size: 2rem;
-  font-weight: bold;
-  color: #333;
-  margin-bottom: 1rem;
-  text-align: center;
-}
-
-.userDetails {
+.field {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  margin-top: 1rem;
+  margin-bottom: 1rem;
   width: 100%;
+  justify-content: space-between;
+  padding: 1rem;
+  background-color: #f5f5f5;
+  border-radius: 0.5rem;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 
-  .field {
-    display: flex;
-    align-items: center;
-    margin-bottom: 0.5rem;
-    width: 100%;
-    justify-content: space-between;
-    padding: 0.5rem 1rem;
-    background-color: #f5f5f5;
-    border-radius: 0.5rem;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  .label {
+    font-weight: bold;
+    color: #333;
+    margin-right: 1rem;
+  }
 
-    .label {
-      font-weight: bold;
-      color: #333;
-      margin-right: 1rem;
-    }
+  .value {
+    font-size: 1rem;
+    color: #666;
+    flex: 1;
+    overflow-wrap: break-word;
+  }
 
-    .value {
-      font-size: 1rem;
-      color: #666;
-    }
+  .input {
+    flex: 1;
+    border: none;
+    background-color: transparent;
+    font-size: 1rem;
+    color: #333;
+    padding: 0.5rem;
+    border-radius: 0.25rem;
 
-    .input {
-      border: none;
-      background-color: transparent;
-      font-size: 1rem;
-      color: #333;
-      padding: 0.25rem 0.5rem;
-      border-radius: 0.25rem;
-
-      &:focus {
-        outline: none;
-        box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.25);
-      }
+    &:focus {
+      outline: none;
+      box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.25);
     }
   }
 }
@@ -78,8 +77,7 @@
   justify-content: center;
   margin-top: 1.5rem;
 
-  .editButton,
-  .saveButton {
+  .button {
     padding: 0.5rem 1rem;
     border: none;
     border-radius: 0.5rem;
@@ -87,6 +85,7 @@
     font-weight: bold;
     cursor: pointer;
     transition: background-color 0.3s ease;
+    margin-right: 1rem;
 
     &.editButton {
       background-color: #007bff;
@@ -100,7 +99,6 @@
     &.saveButton {
       background-color: #28a745;
       color: #fff;
-      margin-left: 1rem;
 
       &:hover {
         background-color: darken(#28a745, 10%);
